<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="amount">Amount</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="custom_tip_percentage">Custom %</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="Purchase_Price">Purchase Price</string>
    <string name="Down_Payment">Down Payment</string>
    <string name="Interest_Rate">Interest Rate</string>
    <string name="Years">Years</string>
    <string name="Ten_Years">10 years</string>
    <string name="Twenty_Years">20 years</string>
    <string name="paymentPerMonth">Payment Per Month For X Years</string>
    <string name="Thirty_Years">30 years</string>
    <string name="Custom_Years">years</string>
    <string name="mortageCalc">Mortgage Calculator</string>
    
</resources>
