<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="11"
    android:useDefaultMargins="true"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_row="0"
        android:text="@string/Purchase_Price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditTextPP"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/amountDisplayTextViewPP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/Down_Payment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditTextDP"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="6" />

    <TextView
        android:id="@+id/amountDisplayTextViewDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Interest_Rate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountEditTextIR"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:maxLength="3" />

    <TextView
        android:id="@+id/amountDisplayTextViewIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:background="@android:color/holo_blue_bright"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_width="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customYearSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="@integer/max_years"
        android:progress="18" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="4"
        android:text="@string/paymentPerMonth"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearTextView01"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="7"
        android:text="@string/Ten_Years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tenYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearTextView02"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="8"
        android:text="@string/Twenty_Years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Space />

    <Space
        android:layout_width="100dp"
        android:layout_height="292dp"
        android:layout_row="5" />

    <Space
        android:layout_width="100dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_height="235dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_height="4dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_height="527dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_row="6" />

    <Space
        android:layout_width="100dp"
        android:layout_row="6" />

    <TextView
        android:id="@+id/twentyYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="8"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearTextView03"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="9"
        android:text="@string/Custom_Years"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_orange_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/yearTextView04"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="9"
        android:background="@android:color/transparent"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>